syntax = "proto3";

package service.product.v1;

option csharp_namespace = "LightOps.Commerce.Proto.Services.Product.V1";

import "google/protobuf/wrappers.proto";

/*************
 * Models
 *************/
message ProtoProduct {
  string id = 1;
  string handle = 2;
  string url = 3;

  string title = 4;
  string type = 5;
  string description = 6;

  string seo_title = 7;
  string seo_description = 8;

  google.protobuf.StringValue primary_category_id = 9;
  repeated string category_ids = 10;

  repeated ProtoProductVariant variants = 11;

  string primary_image = 12;
  repeated string images = 13;
}

message ProtoProductVariant {
  string id = 1;

  string product_id = 2;

  string title = 3;
  string sku = 4;

  ProtoMoney price = 5;
}

message ProtoMoney {
  // ISO 4217 3-letter currency code
  string currency_code = 1;

  // Whole units part of the amount
  int64 units = 2;

  // Nano units of the amount (10^-9)
  // Must be same sign as units
  int32 nanos = 3;
}

/*************
 * Services
 *************/
service ProtoProductService {
  rpc GetProduct(ProtoGetProductRequest) returns (ProtoGetProductResponse) {}
  rpc GetProductsByIds(GetProductsByIdsRequest) returns (GetProductsByIdsResponse) {}
  rpc GetProductsByHandles(GetProductsByHandlesRequest) returns (GetProductsByHandlesResponse) {}

  rpc GetProductsByCategoryId(ProtoGetProductsByCategoryIdRequest) returns (ProtoGetProductsByCategoryIdResponse) {}
  rpc GetProductsByCategoryIds(ProtoGetProductsByCategoryIdsRequest) returns (ProtoGetProductsByCategoryIdsResponse) {}

  rpc GetProductsBySearch(ProtoGetProductsBySearchRequest) returns (ProtoGetProductsBySearchResponse) {}
}

/*************
 * Service Models
 *************/
// GetProduct
message ProtoGetProductRequest {
  oneof identifier {
    string id = 1;
    string handle = 2;
  }
}

message ProtoGetProductResponse {
  ProtoProduct product = 1;
}

// GetProductsByIds
message GetProductsByIdsRequest {
  repeated string ids = 1;
}

message GetProductsByIdsResponse {
  repeated ProtoProduct products = 1;
}

// GetProductsByHandles
message GetProductsByHandlesRequest {
  repeated string handles = 1;
}

message GetProductsByHandlesResponse {
  repeated ProtoProduct products = 1;
}

// GetProductsByCategoryId
message ProtoGetProductsByCategoryIdRequest {
  string category_id = 1;
}

message ProtoGetProductsByCategoryIdResponse {
  repeated ProtoProduct products = 1;
}

// GetProductsByCategoryIds
message ProtoGetProductsByCategoryIdsRequest {
  repeated string category_ids = 1;
}

message ProtoGetProductsByCategoryIdsResponseProductList {
  repeated ProtoProduct products = 1;
}

message ProtoGetProductsByCategoryIdsResponse {
  map<string, ProtoGetProductsByCategoryIdsResponseProductList> products = 1;
}

// GetProductsBySearch
message ProtoGetProductsBySearchRequest {
  string search_term = 1;
}

message ProtoGetProductsBySearchResponse {
  repeated ProtoProduct products = 1;
}
